# Multi-Channel-Advertising-Analytics-Pipeline

./: .gitignore  README.md  build_metadata.py  dbt_project.yml  export_marts.py  profiles.yml  pyproject.toml
macros/: generate_schema_name.sql  safe_divide.sql
models/marts/: _marts.yml  agg_campaign.sql  agg_objective.sql  agg_overall.sql  agg_platform.sql  agg_platform_day.sql  dim_campaign.sql  dim_date.sql  dim_platform.sql  fct_ad_performance.sql
models/staging/: _staging.yml  stg_facebook_ads.sql  stg_google_ads.sql  stg_tiktok_ads.sql
seeds/: _seeds.yml
snowflake/: ddl.sql  setup_objects.py
